[package]
name = "orbimage"
description = "Orbital image features"
repository = "https://gitlab.redox-os.org/redox-os/orbimage"
version = "0.1.17"
license-file = "LICENSE"
readme = "README.md"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[dependencies]
orbclient = "0.4"
image = "0.25.10"
resize = "0.8.9"
rgb = "0.8"
